fixed menu styles on small smartphones

--- a/src/assets/css/sass/base/_variables.scss
+++ b/src/assets/css/sass/base/_variables.scss
@@ -5,11 +5,13 @@ $main-menu-width: 140px;
 $main-menu-width-lg: 140px;
 $main-menu-width-md: 140px;
 $main-menu-width-xs: 140px;
+$main-menu-width-xxs: 100px;
 
 $sub-menu-width: 260px;
 $sub-menu-width-lg: 260px;
 $sub-menu-width-md: 260px;
 $sub-menu-width-xs: 260px;
+$sub-menu-width-xxs: 220px;
 
 $navbar-height: 100px;
 $navbar-height-xs: 70px;
